Home in progress

--- a/cyclorun/content/themes/cyclorun/app/scss/abstract/_variables.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/abstract/_variables.scss
@@ -1,1 +1,16 @@
 $fa-font-path: '~font-awesome/fonts';
+
+$blueduck: #00757F;
+$dark: #333333;
+$ligthgrey:#F5F5F5;
+
+$font-size-s: 0.5rem;
+$font-size-default: 1rem;
+$font-size-lg: 3rem;
+
+$font-family: 'Prompt', sans-serif;
+$font-family-fallback: 'Helvetica', 'Arial', sans-serif;
+
+$transition-fast: 0.3s;
+$transition-medium: 0.5s;
+$transition-slow: 0.7s;
