--- a/cyclorun/content/themes/cyclorun/app/scss/main.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/main.scss
@@ -12,7 +12,8 @@
     'layout/main';
 
 @import
+    'components/outing-article',
     'components/navbar',
     'components/welcome-message',
-    'components/welcome-submessage'
+    'components/welcome-submessage';
 
