connexion form integration

--- a/cyclorun/content/themes/cyclorun/app/scss/main.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/main.scss
@@ -13,6 +13,7 @@
 
 @import
     'components/outing-article',
+    'components/connexion-form',
     'components/navbar',
     'components/welcome-message',
     'components/welcome-submessage';
