--- a/cyclorun/content/themes/cyclorun/app/scss/main.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/main.scss
@@ -14,6 +14,7 @@
 @import
     'components/outing-article',
     'components/connexion-form',
+    'components/inscription-form',
     'components/navbar',
     'components/welcome-message',
     'components/welcome-submessage';
