commit before Dev branch pull

--- a/cyclorun/content/themes/cyclorun/app/scss/main.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/main.scss
@@ -13,6 +13,7 @@
 
 @import
     'components/outing-article',
+    'components/outing-registration',
     'components/connexion-form',
     'components/inscription-form',
     'components/navbar',
