Create Customs Nav + modifs in login page css

--- a/cyclorun/content/themes/cyclorun/app/scss/base/_base.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/base/_base.scss
@@ -9,3 +9,16 @@ body {
 p {
     margin: 1rem;
 }
+
+a {
+    color: $dark;
+}
+
+a:hover{
+    color: $dark;
+    text-decoration: none;
+}
+
+a:visited{
+    color: $dark;
+}
