--- a/cyclorun/content/themes/cyclorun/app/scss/components/_green-navbar.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/components/_green-navbar.scss
@@ -3,15 +3,16 @@
     display: flex;
     justify-content: space-between;
 
-    &__item{
-        color: $dark;
-    }
+    &__link{
+        color: $ligthgrey;
 
-    &__item__is-active{
-        color: $blueduck;
-        border-bottom: $font-size-s/3 solid $blueduck ;
+        &:visited{
+            color: $ligthgrey;
+        }
     }
 }
+
+
 
 .authentified{
     border-bottom: $font-size-s/3 solid $blueduck;
