--- a/cyclorun/content/themes/cyclorun/app/scss/main.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/main.scss
@@ -15,7 +15,8 @@
     'components/outing-article',
     'components/connexion-form',
     'components/inscription-form',
-    'components/navbar',
+    'components/green-navbar',
+    'components/grey-navbar',
     'components/welcome-message',
     'components/welcome-submessage';
 
