--- a/cyclorun/content/themes/cyclorun/app/scss/components/_connexion-form.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/components/_connexion-form.scss
@@ -1,35 +1,49 @@
 .connexion{
     width: 30%;
-    margin: auto;
     background-color: $ligthgrey;
-    border-radius: $font-size-md;
-    color: $blueduck;
-    padding: $gutter-large;
+    position: absolute;
+    top: 30%;
+    left: 40%;
+    color: $dark;
+
     &__page{
-        background: url('../assets/images/cycl/cycl1.jpg'),  url('../assets/images/run/run1.jpg');
-        background-size: 50%;
-        background-repeat: no-repeat, no-repeat;
-        background-position: left, right;
+
+        &__logo{
+            padding-left: 5rem;
+            padding-bottom: 2rem;
+        }
+
+        &__inputs{
+            width: 100%;
+        }
+    
         &__buttons{
-            width: 20%;
-            margin: auto;
+            width: 100%;
             display: flex;
-            justify-content: space-around;
+            
             &__connexion{    
-                margin-top: $gutter-large-very*2;
+                margin-top: 2rem;
+                margin-right: 2rem;
                 background-color: $blueduck;
-                padding: $gutter-small;
+                //padding: $gutter-small;
                 border-radius: $gutter-small;
                 color: $ligthgrey;
             }
             &__inscription{   
-                background-color: $blueduck;
-                padding: $gutter-small;
+                margin-top: 2rem;
+                background-color: $dark;
+                //padding: $gutter-small;
                 border-radius: $gutter-small;
                 color: $ligthgrey;
-                vertical-align: auto;
-                text-decoration: none;
-                border: 1px solid black;
+
+                &__link{
+                    color: $ligthgrey;
+
+                    &:visited{
+                        color: $ligthgrey;
+                    }
+                }
+
             }
         }
     }
@@ -40,7 +54,7 @@
         font-weight: bolder;
         color: $ligthgrey;
         text-align: center;
-        padding-top: $gutter-large-very;
-        padding-bottom: $gutter-large-very;
+        //padding-top: $gutter-large-very;
+        //padding-bottom: $gutter-large-very;
     }
 }
