html outing-details-page ok participation-outing-page in progress

--- a/cyclorun/content/themes/cyclorun/app/scss/components/_outing-article.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/components/_outing-article.scss
@@ -25,6 +25,13 @@
             line-height: $font-size-default;
             padding: $gutter-small;
         }
+        
+        &__pict{
+
+            &__svg{
+                width: 3%;
+            }
+        }
     }
 }
 
