--- a/cyclorun/content/themes/cyclorun/app/scss/main.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/main.scss
@@ -12,6 +12,9 @@
     'layout/main';
 
 @import
+    'components/participation-outing-page',
+    'components/outing-details-page',
+    'components/profile-page',
     'components/outing-article',
     'components/outing-registration',
     'components/connexion-form',
