--- a/cyclorun/content/themes/cyclorun/app/scss/base/_base.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/base/_base.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300;500;800&display=swap');
 
 body {
+    margin-top: -32px;
     background-color: $ligthgrey;
     font-family: $font-family;
     color: $dark;
