Login + Home Page style

--- a/cyclorun/content/themes/cyclorun/app/scss/components/_green-navbar.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/components/_green-navbar.scss
@@ -5,10 +5,10 @@
     padding-top: 2rem;
 
     &__link{
-        color: $ligthgrey;
+        color: $lightgrey;
 
         &:visited{
-            color: $ligthgrey;
+            color: $lightgrey;
         }
     }
 }
