--- a/cyclorun/content/themes/cyclorun/app/scss/components/_grey-navbar.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/components/_grey-navbar.scss
@@ -23,6 +23,6 @@
 
 
 .authentified{
-    background-color: $ligthgrey;
+    background-color: $lightgrey;
     border-bottom: $font-size-s/3 solid $blueduck;
 }
