--- a/cyclorun/content/themes/cyclorun/app/scss/components/_outing-article.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/components/_outing-article.scss
@@ -19,7 +19,7 @@
         &__button{
             background-color: $dark;
             border-radius: $gutter-small;
-            color:$ligthgrey;
+            color:$lightgrey;
             font-size: $font-size-default;
             float: right;
             line-height: $font-size-default;
