--- a/cyclorun/content/themes/cyclorun/app/scss/components/_outing-details-page.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/components/_outing-details-page.scss
@@ -83,7 +83,7 @@
                 margin-right: auto;
 
                 &__content{
-                    color: $ligthgrey;
+                    color: $lightgrey;
                 }
             }
         }
