--- a/cyclorun/content/themes/cyclorun/app/scss/base/_base.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/base/_base.scss
@@ -2,13 +2,13 @@
 
 body {
     margin-top: -32px;
-    background-color: $ligthgrey;
+    background-color: $lightgrey;
     font-family: $font-family;
     color: $dark;
 }
 
 p {
-    margin: 1rem;
+    margin: 0.5rem;
 }
 
 a {
