--- a/cyclorun/content/themes/cyclorun/app/scss/components/_connexion-form.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/components/_connexion-form.scss
@@ -1,8 +1,8 @@
 .connexion{
     width: 30%;
-    background-color: $ligthgrey;
+    background-color: $lightgrey;
     position: absolute;
-    top: 30%;
+    top: 25%;
     left: 40%;
     color: $dark;
 
@@ -20,6 +20,7 @@
         &__buttons{
             width: 100%;
             display: flex;
+            margin-left: 3rem;
             
             &__connexion{    
                 margin-top: 2rem;
@@ -27,20 +28,20 @@
                 background-color: $blueduck;
                 //padding: $gutter-small;
                 border-radius: $gutter-small;
-                color: $ligthgrey;
+                color: $lightgrey;
             }
             &__inscription{   
                 margin-top: 2rem;
                 background-color: $dark;
                 //padding: $gutter-small;
                 border-radius: $gutter-small;
-                color: $ligthgrey;
+                color: $lightgrey;
 
                 &__link{
-                    color: $ligthgrey;
+                    color: $lightgrey;
 
                     &:visited{
-                        color: $ligthgrey;
+                        color: $lightgrey;
                     }
                 }
 
@@ -52,9 +53,20 @@
         width: 20%;
         margin: auto;
         font-weight: bolder;
-        color: $ligthgrey;
+        color: $lightgrey;
         text-align: center;
         //padding-top: $gutter-large-very;
         //padding-bottom: $gutter-large-very;
     }
+}
+
+.password_lost{
+    color: #00757F;
+    margin-left: 6rem;
+    
+}
+
+.password_lost:visited{
+    color: #00757F;
+
 }
