--- a/cyclorun/content/themes/cyclorun/app/scss/components/_registration-form.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/components/_registration-form.scss
@@ -5,7 +5,7 @@
         width:30%;
         margin: auto;
         text-align: center;
-        color: $ligthgrey;
+        color: $lightgrey;
     }
 
     
