Front Page + Custom Home Style

--- a/cyclorun/content/themes/cyclorun/app/scss/pages/_custom-home.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/pages/_custom-home.scss
@@ -1,3 +1,15 @@
 .custom-home{
-    
+    &__title{
+        text-align: center; 
+        margin:2rem;
+    }
+
+    &__wrap{
+        display:flex; 
+        justify-content: space-around; 
+    }
+
+    &__button{
+        background-color: $blueduck;
+    }
 }
