--- a/cyclorun/content/themes/cyclorun/app/scss/main.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/main.scss
@@ -13,17 +13,17 @@
 
 @import
     'pages/custom-home',
-    'pages/home-visitors';
+    'pages/home-visitors',
+    'pages/outing-details-page',
+    'pages/profile-page';
 
 @import
     'components/participation-outing-page',
-    'components/outing-details-page',
-    'components/profile-page',
-    'components/outing-article',
     'components/outing-registration',
     'components/connexion-form',
     'components/registration-form',
     'components/green-navbar',
+    'components/outing',
     'components/grey-navbar';
 
 
