modif apres mapbox

--- a/cyclorun/content/themes/cyclorun/app/scss/abstract/_variables.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/abstract/_variables.scss
@@ -3,7 +3,11 @@ $fa-font-path: '~font-awesome/fonts';
 //coleurs de la police
 $blueduck: #00757F;
 $dark: #333333;
-$lightgrey:#F5F5F5;
+$lightgrey
+
+
+
+:#F5F5F5;
 
 //taille de la police
 $font-size-s: 0.5rem;
