--- a/cyclorun/content/themes/cyclorun/app/scss/components/_registration-form.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/components/_registration-form.scss
@@ -7,10 +7,12 @@
         width:30%;
         margin: auto;
         text-align: center;
-        color: $ligthgrey;
+        color: $lightgrey
+;
     }
     &__form{
-        background-color: $ligthgrey;
+        background-color: $lightgrey
+;
         display: flex;
         width: 60%;
         margin: auto;
