Animations in Home Visitors Ok

--- a/cyclorun/content/themes/cyclorun/app/scss/base/_base.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/base/_base.scss
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300;500;800&display=swap');
 
-body {
-    margin-top: -32px;
-    background-color: $lightgrey;
-    font-family: $font-family;
-    color: $dark;
-}
+html {
+    height: 100%;
+  }
+  body {
+    max-height: 100%;
+    margin: 0;
+    padding: 0;
+  }
 
 p {
     margin: 0.5rem;
