--- a/cyclorun/content/themes/cyclorun/app/scss/components/_registration-form.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/components/_registration-form.scss
@@ -104,11 +104,11 @@
 	width:30%;
 	margin: auto;
 	text-align: center;
-	color: $ligthgrey;
+	color: $lightgrey;
 }
 
 .inscription__form{
-	background-color: $ligthgrey;
+	background-color: $lightgrey;
 	display: flex;
 	width: 60%;
 	min-height: 100mvh;
