--- a/cyclorun/content/themes/cyclorun/app/scss/components/_registration-form.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/components/_registration-form.scss
@@ -75,4 +75,13 @@
 	font-weight: bold;
 }
 
+.errors{
+	color:red;
+	font-weight: bold;
+	margin-top: 2rem;
+
+	&__list{
+		list-style: none;
+	}
+}
 
