--- a/cyclorun/content/themes/cyclorun/public/css/style.css
+++ b/cyclorun/content/themes/cyclorun/public/css/style.css
@@ -9916,6 +9916,13 @@ a:visited {
   text-transform: uppercase;
   font-weight: bold; }
 
+.errors {
+  color: red;
+  font-weight: bold;
+  margin-top: 2rem; }
+  .errors__list {
+    list-style: none; }
+
 .navbar {
   background-color: #00757F;
   display: flex;
