outing details style

--- a/cyclorun/content/themes/cyclorun/app/scss/components/_outing.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/components/_outing.scss
@@ -19,5 +19,11 @@
 
     &__button{
         background-color: $blueduck;
+        color:$lightgrey;
+        border: none;
+    }
+
+    &__button:visited{
+        color: $lightgrey;
     }
 }
