404 page and text on custom-home

--- a/cyclorun/content/themes/cyclorun/app/scss/main.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/main.scss
@@ -15,7 +15,8 @@
     'pages/custom-home',
     'pages/home-visitors',
     'pages/outing-details-page',
-    'pages/profile-page';
+    'pages/profile-page',
+    'pages/404';
 
 @import
     'components/participation-outing-page',
