--- a/cyclorun/content/themes/cyclorun/app/scss/pages/_profile-page.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/pages/_profile-page.scss
@@ -67,7 +67,7 @@
 
 /* Titres des listes de la partie droite de la page */
 .profile__outings__created__title, .profile__outings__future__title{
-    text-decoration: underline;
+    font-weight: bold;
     line-height: 1.5rem;
     margin-bottom: 3rem;
 }
