--- a/cyclorun/content/themes/cyclorun/app/scss/pages/_custom-home.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/pages/_custom-home.scss
@@ -13,3 +13,31 @@
         background-color: $blueduck;
     }
 }
+
+.outing{
+    
+    &__attachments {
+
+        &__image {
+            max-width: 100%;
+            max-height: 100%;
+            display: block;
+        }
+    }
+
+    &__body{
+
+        &__title{
+            text-align: center;
+        }        
+    }
+}
+
+.messageEmpty{
+    text-align: center;
+
+    &__content{
+        text-align: center;
+        margin-bottom: 1rem;
+    }
+}
