--- a/cyclorun/content/themes/cyclorun/app/scss/components/_green-navbar.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/components/_green-navbar.scss
@@ -2,7 +2,14 @@
     background-color: $blueduck;
     display: flex;
     justify-content: space-between;
-   
+    
+    &__button{
+        background-color: $dark;
+    }
+
+    &__button:hover{
+        background-color: $blueduck;
+    }
 
     &__link{
         color: $lightgrey;
